force-app/main/default/objects/GRR_RegistroCarga__c/GRR_RegistroCarga__c.object-meta.xml
<CustomObject>
    <description>Objeto para el proyecto GRR.</description>
    <label>Registro carga</label>
    <nameField>
        <displayFormat>REG-{00000000}</displayFormat>
        <label>Registro Carga Number (internal)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros carga</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>