force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Adicional3__c.field-meta.xml
<CustomField>
    <fullName>GRR_Adicional3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adicional 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>