force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_AnoDeVtoPtmo__c.field-meta.xml
<CustomField>
    <fullName>GRR_AnoDeVtoPtmo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Año de vto ptmo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>