force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Aportacion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Aportacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aportación</label>
    <length>20</length>
    <type>Text</type>
</CustomField>