force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Causa__c.field-meta.xml
<CustomField>
    <fullName>GRR_Causa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Causa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>