force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Clasificacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clasificación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>