force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_ClasificacionPorAlertas__c.field-meta.xml
<CustomField>
    <fullName>GRR_ClasificacionPorAlertas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clasificación por alertas</label>
    <length>50</length>
    <type>Text</type>
</CustomField>