force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_CodDTGRR__c.field-meta.xml
<CustomField>
    <fullName>GRR_CodDTGRR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cod_DT_GRR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>