force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_CodigoDT__c.field-meta.xml
<CustomField>
    <fullName>GRR_CodigoDT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código DT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>