force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_CodigoUR__c.field-meta.xml
<CustomField>
    <fullName>GRR_CodigoUR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código UR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>