force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Comunidad__c.field-meta.xml
<CustomField>
    <fullName>GRR_Comunidad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comunidad</label>
    <length>200</length>
    <type>Text</type>
</CustomField>