force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_ConSinAlquiler__c.field-meta.xml
<CustomField>
    <fullName>GRR_ConSinAlquiler__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Con/Sin alquiler</label>
    <length>50</length>
    <type>Text</type>
</CustomField>