force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_ControlNumExp2__c.field-meta.xml
<CustomField>
    <fullName>GRR_ControlNumExp2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Control Nº exp2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>