force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_CuotaActual__c.field-meta.xml
<CustomField>
    <fullName>GRR_CuotaActual__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cuota actual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>