force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Dato__c.field-meta.xml
<CustomField>
    <fullName>GRR_Dato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>