force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_DetalleResolucion__c.field-meta.xml
<CustomField>
    <fullName>GRR_DetalleResolucion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detalle resolución</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>