force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Direccion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Direccion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección</label>
    <length>100</length>
    <type>Text</type>
</CustomField>