force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FechaEntrada__c.field-meta.xml
<CustomField>
    <fullName>GRR_FechaEntrada__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha entrada</label>
    <type>Date</type>
</CustomField>