force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FechaEnvioDT__c.field-meta.xml
<CustomField>
    <fullName>GRR_FechaEnvioDT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha envío DT</label>
    <type>Date</type>
</CustomField>