force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FechaInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>GRR_FechaInicioContrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha inicio contrato</label>
    <type>Date</type>
</CustomField>