force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FechaIPL__c.field-meta.xml
<CustomField>
    <fullName>GRR_FechaIPL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha IPL</label>
    <type>Date</type>
</CustomField>