force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FechaLanzamiento__c.field-meta.xml
<CustomField>
    <fullName>GRR_FechaLanzamiento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha lanzamiento</label>
    <type>Date</type>
</CustomField>