force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FechaProximaRevision__c.field-meta.xml
<CustomField>
    <fullName>GRR_FechaProximaRevision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha próxima revisión</label>
    <type>Date</type>
</CustomField>