force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FechaVtoContrato__c.field-meta.xml
<CustomField>
    <fullName>GRR_FechaVtoContrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha vto. contrato</label>
    <type>Date</type>
</CustomField>