force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FinBonificacion__c.field-meta.xml
<CustomField>
    <fullName>GRR_FinBonificacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin bonificación</label>
    <type>Date</type>
</CustomField>