force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FondoAlQuePertenece__c.field-meta.xml
<CustomField>
    <fullName>GRR_FondoAlQuePertenece__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fondo al que pertenece</label>
    <length>100</length>
    <type>Text</type>
</CustomField>