force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_FSoluc__c.field-meta.xml
<CustomField>
    <fullName>GRR_FSoluc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>F. soluc.</label>
    <type>Date</type>
</CustomField>