force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_GestionEnMes__c.field-meta.xml
<CustomField>
    <fullName>GRR_GestionEnMes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gestión en mes</label>
    <type>Checkbox</type>
</CustomField>