force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_ImporteAlquilerAprobado__c.field-meta.xml
<CustomField>
    <fullName>GRR_ImporteAlquilerAprobado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Importe alquiler aprobado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>