force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Incid__c.field-meta.xml
<CustomField>
    <fullName>GRR_Incid__c</fullName>
    <label>Incid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Nok</fullName>
            </value>
            <value>
                <fullName>Mas de 2 días</fullName>
            </value>
            <value>
                <fullName>Resp errónea</fullName>
            </value>
            <value>
                <fullName>Varias incid</fullName>
            </value>
            <value>
                <fullName>Reportado Nok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>