force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Informacion_Cliente__c.field-meta.xml
<CustomField>
    <fullName>GRR_Informacion_Cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Información cliente</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>