force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_InformacionAportadaPorOficina__c.field-meta.xml
<CustomField>
    <fullName>GRR_InformacionAportadaPorOficina__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Información aportada por oficina</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>