force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Intervinientes__c.field-meta.xml
<CustomField>
    <fullName>GRR_Intervinientes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intervinientes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>