force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Intervinientes_Con_RR__c.field-meta.xml
<CustomField>
    <fullName>GRR_Intervinientes_Con_RR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interviniente/s con RR</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>