force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_IntervinientesConRR__c.field-meta.xml
<CustomField>
    <fullName>GRR_IntervinientesConRR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interviniente/s con RR (OLD)</label>
    <type>TextArea</type>
</CustomField>