force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_IPL__c.field-meta.xml
<CustomField>
    <fullName>GRR_IPL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IPL</label>
    <type>Date</type>
</CustomField>