force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Libre3__c.field-meta.xml
<CustomField>
    <fullName>GRR_Libre3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Libre3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>