force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_MesesImpago__c.field-meta.xml
<CustomField>
    <fullName>GRR_MesesImpago__c</fullName>
    <label>Meses impago</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>