force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Morosidad__c.field-meta.xml
<CustomField>
    <fullName>GRR_Morosidad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Morosidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>