force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_MotivoBloqueo__c.field-meta.xml
<CustomField>
    <fullName>GRR_MotivoBloqueo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo bloqueo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>