force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_MotivoElevacionAComite__c.field-meta.xml
<CustomField>
    <fullName>GRR_MotivoElevacionAComite__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo elevación a comité</label>
    <length>100</length>
    <type>Text</type>
</CustomField>