force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_MotivoPresentacionCaso__c.field-meta.xml
<CustomField>
    <fullName>GRR_MotivoPresentacionCaso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo presentación caso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>