force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NIF__c.field-meta.xml
<CustomField>
    <fullName>GRR_NIF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIFs</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>