force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NIFs_Con_RR__c.field-meta.xml
<CustomField>
    <fullName>GRR_NIFs_Con_RR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIF/s con RR</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>