force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NIFsConRR__c.field-meta.xml
<CustomField>
    <fullName>GRR_NIFsConRR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIF/s con RR (OLD)</label>
    <type>TextArea</type>
</CustomField>