force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NivelRiesgoSegunCP__c.field-meta.xml
<CustomField>
    <fullName>GRR_NivelRiesgoSegunCP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nivel riesgo según CP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>