force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NoCumplimientoCriteriosVulnerabilida__c.field-meta.xml
<CustomField>
    <fullName>GRR_NoCumplimientoCriteriosVulnerabilida__c</fullName>
    <label>No cumplimiento criterios vulnerabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Económico</fullName>
            </value>
            <value>
                <fullName>Sociofamiliar</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>