force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NombreDT__c.field-meta.xml
<CustomField>
    <fullName>GRR_NombreDT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre DT</label>
    <length>200</length>
    <type>Text</type>
</CustomField>