force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NReclamacionesASAAPP__c.field-meta.xml
<CustomField>
    <fullName>GRR_NReclamacionesASAAPP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nº reclamaciones AS AAPP</label>
    <length>200</length>
    <type>Text</type>
</CustomField>