force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NumeroDeOcupantes__c.field-meta.xml
<CustomField>
    <fullName>GRR_NumeroDeOcupantes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nº de ocupantes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>