force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NumeroDeSuspensionesPropiedad__c.field-meta.xml
<CustomField>
    <fullName>GRR_NumeroDeSuspensionesPropiedad__c</fullName>
    <label>Nº de suspensiones propiedad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>