force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_NumeroVisitas__c.field-meta.xml
<CustomField>
    <fullName>GRR_NumeroVisitas__c</fullName>
    <label>Nº visitas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>