force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_ObservacionesCP__c.field-meta.xml
<CustomField>
    <fullName>GRR_ObservacionesCP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones CP</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>