force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_ObservacionesDelProcedimiento__c.field-meta.xml
<CustomField>
    <fullName>GRR_ObservacionesDelProcedimiento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones del procedimiento</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>