force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_OcupacionAnteriorAl1062021__c.field-meta.xml
<CustomField>
    <fullName>GRR_OcupacionAnteriorAl1062021__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ocupación anterior al 1/06/2021</label>
    <length>20</length>
    <type>Text</type>
</CustomField>