force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_OfrecimientoAlquilerSocial__c.field-meta.xml
<CustomField>
    <fullName>GRR_OfrecimientoAlquilerSocial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ofrecimiento alquiler social</label>
    <length>20</length>
    <type>Text</type>
</CustomField>