force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Origen__c.field-meta.xml
<CustomField>
    <fullName>GRR_Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAPP</fullName>
            </value>
            <value>
                <fullName>Comité</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>ILOC/NO DOC</fullName>
            </value>
            <value>
                <fullName>ISOC</fullName>
            </value>
            <value>
                <fullName>PAH</fullName>
            </value>
            <value>
                <fullName>Propiedad</fullName>
            </value>
            <value>
                <fullName>Recobro Externo</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>SACH</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>