force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_OtrosMotivosElevacionAComite__c.field-meta.xml
<CustomField>
    <fullName>GRR_OtrosMotivosElevacionAComite__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Otros motivos elevación a comité</label>
    <length>200</length>
    <type>Text</type>
</CustomField>