force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PerimetroExtrajudicial__c.field-meta.xml
<CustomField>
    <fullName>GRR_PerimetroExtrajudicial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Perímetro extrajudicial</label>
    <length>200</length>
    <type>Text</type>
</CustomField>