force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PJU__c.field-meta.xml
<CustomField>
    <fullName>GRR_PJU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PJU</label>
    <length>200</length>
    <type>Text</type>
</CustomField>