force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Poblacion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Poblacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Población</label>
    <length>50</length>
    <type>Text</type>
</CustomField>