force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PrecioMinimo__c.field-meta.xml
<CustomField>
    <fullName>GRR_PrecioMinimo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Precio mínimo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>