force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PrecioMinimoAPercibir__c.field-meta.xml
<CustomField>
    <fullName>GRR_PrecioMinimoAPercibir__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Precio mínimo a percibir</label>
    <length>50</length>
    <type>Text</type>
</CustomField>