force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PreSancion__c.field-meta.xml
<CustomField>
    <fullName>GRR_PreSancion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-sanción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>