force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Problema__c.field-meta.xml
<CustomField>
    <fullName>GRR_Problema__c</fullName>
    <label>Problema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alquiler</fullName>
            </value>
            <value>
                <fullName>Amenazas oficina</fullName>
            </value>
            <value>
                <fullName>COVID 19</fullName>
            </value>
            <value>
                <fullName>Lanzamiento</fullName>
            </value>
            <value>
                <fullName>Ocupación</fullName>
            </value>
            <value>
                <fullName>Okupación</fullName>
            </value>
            <value>
                <fullName>Prescripción deuda</fullName>
            </value>
            <value>
                <fullName>Procedimiento PJU</fullName>
            </value>
            <value>
                <fullName>Queja / Reclamación</fullName>
            </value>
            <value>
                <fullName>Reconsideracion DP</fullName>
            </value>
            <value>
                <fullName>Refinanciación</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>