force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PromocionComercial__c.field-meta.xml
<CustomField>
    <fullName>GRR_PromocionComercial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promoción comercial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>