force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PropuestaSVHHaya__c.field-meta.xml
<CustomField>
    <fullName>GRR_PropuestaSVHHaya__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Propuesta SVH/Haya</label>
    <length>100</length>
    <type>Text</type>
</CustomField>