force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_PVP__c.field-meta.xml
<CustomField>
    <fullName>GRR_PVP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PVP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>