force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_QuitaMaxima__c.field-meta.xml
<CustomField>
    <fullName>GRR_QuitaMaxima__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quita máxima</label>
    <length>20</length>
    <type>Text</type>
</CustomField>