force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_RentaActual__c.field-meta.xml
<CustomField>
    <fullName>GRR_RentaActual__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renta actual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>