force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_RentaPropuestaPorElInquilino__c.field-meta.xml
<CustomField>
    <fullName>GRR_RentaPropuestaPorElInquilino__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renta propuesta por el inquilino</label>
    <length>200</length>
    <type>Text</type>
</CustomField>