force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Resolucion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolución</label>
    <length>100</length>
    <type>Text</type>
</CustomField>