force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_SancionInmobiliaria__c.field-meta.xml
<CustomField>
    <fullName>GRR_SancionInmobiliaria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sanción inmobiliaria</label>
    <length>200</length>
    <type>Text</type>
</CustomField>