force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_SeguridadAntesDeReocupado__c.field-meta.xml
<CustomField>
    <fullName>GRR_SeguridadAntesDeReocupado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seguridad antes de reocupado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>