force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Soc__c.field-meta.xml
<CustomField>
    <fullName>GRR_Soc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Soc.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>