force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_SolicitudesASOrganos__c.field-meta.xml
<CustomField>
    <fullName>GRR_SolicitudesASOrganos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Solicitudes AS órganos</label>
    <length>20</length>
    <type>Text</type>
</CustomField>