force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_TipoDeInmueble__c.field-meta.xml
<CustomField>
    <fullName>GRR_TipoDeInmueble__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de inmueble</label>
    <length>50</length>
    <type>Text</type>
</CustomField>