force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_TipoDeOcupante__c.field-meta.xml
<CustomField>
    <fullName>GRR_TipoDeOcupante__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de ocupante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>