force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_UR__c.field-meta.xml
<CustomField>
    <fullName>GRR_UR__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Código consulta (CC)</label>
    <referenceTo>GRR_UR__c</referenceTo>
    <relationshipLabel>Registros carga</relationshipLabel>
    <relationshipName>Registros_carga</relationshipName>
    <type>Lookup</type>
</CustomField>