force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_UsoAnomalo__c.field-meta.xml
<CustomField>
    <fullName>GRR_UsoAnomalo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Uso anómalo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>