force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_VCB__c.field-meta.xml
<CustomField>
    <fullName>GRR_VCB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VCB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>