force-app/main/default/objects/GRR_RegistroCarga__c/fields/GRR_Vulnerabilidad__c.field-meta.xml
<CustomField>
    <fullName>GRR_Vulnerabilidad__c</fullName>
    <label>Vulnerabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Antiguo deudor</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Edad avanzada</fullName>
            </value>
            <value>
                <fullName>Enfermedad/discapacidad</fullName>
            </value>
            <value>
                <fullName>Exclusión social</fullName>
            </value>
            <value>
                <fullName>Familia monoparental</fullName>
            </value>
            <value>
                <fullName>Menores</fullName>
            </value>
            <value>
                <fullName>Programa centralizado</fullName>
            </value>
            <value>
                <fullName>Riesgo Reputacional</fullName>
            </value>
            <value>
                <fullName>Soporte PAH</fullName>
            </value>
            <value>
                <fullName>Violencia de género</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>