force-app/main/default/objects/GRR_RegistroCarga__c/recordTypes/GRR_Acta_comite.recordType-meta.xml
<RecordType>
    <fullName>GRR_Acta_comite</fullName>
    <active>true</active>
    <label>Acta de comité</label>
</RecordType>