force-app/main/default/objects/GRR_RegistroCarga__c/recordTypes/GRR_Daciones.recordType-meta.xml
<RecordType>
    <fullName>GRR_Daciones</fullName>
    <active>true</active>
    <label>Daciones</label>
</RecordType>