force-app/main/default/objects/GRR_RegistroCarga__c/recordTypes/GRR_Historico.recordType-meta.xml
<RecordType>
    <fullName>GRR_Historico</fullName>
    <active>true</active>
    <label>Histórico</label>
</RecordType>