force-app/main/default/objects/GRR_RegistroCarga__c/recordTypes/GRR_Recobro.recordType-meta.xml
<RecordType>
    <fullName>GRR_Recobro</fullName>
    <active>true</active>
    <label>Recobro</label>
</RecordType>