force-app/main/default/objects/GRR_RegistroCarga__c/listViews/Actas_de_comite.listView-meta.xml
<ListView>
    <fullName>Actas_de_comite</fullName>
    <columns>NAME</columns>
    <columns>GRR_CodigoUR__c</columns>
    <columns>GRR_UR__c</columns>
    <columns>GRR_Caso__c</columns>
    <columns>GRR_Fichero__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>GRR_GestionEnMes__c</columns>
    <columns>GRR_RespuestaGRR__c</columns>
    <columns>GRR_GRR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GRR_RegistroCarga__c.GRR_Acta_comite</value>
    </filters>
    <label>Actas de comite</label>
    <sharedTo>
        <role>GRR</role>
        <role>GRR_Agente</role>
    </sharedTo>
</ListView>