force-app/main/default/objects/GRR_RegistroCarga__c/listViews/Recobros.listView-meta.xml
<ListView>
    <fullName>Recobros</fullName>
    <columns>NAME</columns>
    <columns>GRR_NIFs_Con_RR__c</columns>
    <columns>GRR_NIF__c</columns>
    <columns>GRR_Caso__c</columns>
    <columns>GRR_Fichero__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>GRR_RegistroCarga__c.GRR_Recobro</value>
    </filters>
    <label>Recobros</label>
    <sharedTo>
        <role>GRR</role>
        <role>GRR_Agente</role>
    </sharedTo>
</ListView>